<resources>
    <string name="app_name">NewsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_email">Enter Email</string>
    <string name="lets_sign_you_in">Let\'s sign you in</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_an_account">Don\'t have an account ?</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="submit">Submit</string>
    <string name="create_an_account">Create an account</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_repassword">Enter Repassword</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="reset">Reset</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="change_password">Change Password</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
</resources>