<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homePageFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/searchPageFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />
    <item
        android:id="@+id/categoriesPageFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_categories"
        android:title="@string/categories" />
    <item
        android:id="@+id/favoritesPageFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_favorites"
        android:title="@string/favorites" />
    <item
        android:id="@+id/profilePageFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu>